--- a/client/index.html
+++ b/client/index.html
@@ -1,27 +1,91 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h3>Discord Chat</h3>
-
-    <div id="messages"></div>
-
-    <input id="msg" placeholder="Type message..." />
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Discord Chat Clone</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #36393f;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+    h3 {
+      color: #7289da;
+    }
+    #messages {
+      width: 400px;
+      height: 400px;
+      border: 1px solid #7289da;
+      overflow-y: auto;
+      margin-bottom: 10px;
+      padding: 10px;
+      background-color: #2f3136;
+      border-radius: 5px;
+    }
+    #msg {
+      width: 300px;
+      padding: 5px;
+      border-radius: 3px;
+      border: none;
+    }
+    button {
+      padding: 5px 10px;
+      margin-left: 5px;
+      border: none;
+      border-radius: 3px;
+      background-color: #7289da;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #5b6eae;
+    }
+    .message {
+      margin-bottom: 5px;
+      padding: 5px;
+      background-color: #40444b;
+      border-radius: 3px;
+    }
+  </style>
+</head>
+<body>
+  <h3>Discord Chat Clone</h3>
+  <div id="messages"></div>
+  <div>
+    <input id="msg" placeholder="Type a message..." />
     <button onclick="sendMsg()">Send</button>
+  </div>
 
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    <script>
-      const socket = io("YOUR_BACKEND_URL");
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+  <script>
+    // 🔹 CHANGE THIS TO YOUR BACKEND URL
+    const socket = io("https://rikumiku0.onrender.com");
 
-      socket.on("chat-message", (msg) => {
-        let m = document.createElement("div");
-        m.innerText = msg;
-        document.body.appendChild(m);
-      });
+    const messagesDiv = document.getElementById("messages");
+    const input = document.getElementById("msg");
 
-      function sendMsg() {
-        const text = document.getElementById("msg").value;
-        socket.emit("chat-message", text);
-      }
-    </script>
-  </body>
-</html>
+    socket.on("chat-message", (msg) => {
+      const m = document.createElement("div");
+      m.className = "message";
+      m.innerText = msg;
+      messagesDiv.appendChild(m);
+      messagesDiv.scrollTop = messagesDiv.scrollHeight; // auto scroll
+    });
+
+    function sendMsg() {
+      const text = input.value.trim();
+      if (text === "") return;
+      socket.emit("chat-message", text);
+      input.value = "";
+    }
+
+    // Optional: send message on Enter key
+    input.addEventListener("keypress", (e) => {
+      if (e.key === "Enter") sendMsg();
+    });
+  </script>
+</body>
