--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Discord Chat Clone</title>
+  <title>brick chat</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #36393f;
+      background-color: #000000;
       color: white;
       display: flex;
       flex-direction: column;
